--- a/test/command/4669.md
+++ b/test/command/4669.md
@@ -6,7 +6,7 @@
   while (n > 0) {
 \end{verbatim}
 ^D
-[Para [Span ("",[],[]) [Code ("",[],[]) "<-"]]]
+[Para [Span ("",[],[]) [Code ("",[],[]) "<-"]]
 ,CodeBlock ("",[],[]) "  while (n > 0) {"]
 ```
 
