HTML writer: ensure TeX formulas are rendered correctly
The web service passed in to `--webtex` may render formulas using inline
or display style by default. Prefixing formulas with the appropriate
command ensures they are rendered correctly.

This is a followup to the discussion in #5656.

--- a/test/command/5655.md
+++ b/test/command/5655.md
@@ -9,6 +9,6 @@ $T_n={n+1 \choose 2}$
 % pandoc --webtex
 $$T_n={n+1 \choose 2}$$
 ^D
-<p><br /><img style="vertical-align:middle" src="https://latex.codecogs.com/png.latex?T_n%3D%7Bn%2B1%20%5Cchoose%202%7D" alt="T_n={n+1 \choose 2}" title="T_n={n+1 \choose 2}" /><br /></p>
+<p><br /><img style="vertical-align:middle" src="https://latex.codecogs.com/png.latex?%5Cdisplaystyle%20T_n%3D%7Bn%2B1%20%5Cchoose%202%7D" alt="T_n={n+1 \choose 2}" title="T_n={n+1 \choose 2}" /><br /></p>
 ````
 
