[LaTeX] Enable user-override for hyphenations.
User can specify 'hyphenation: every-where' in YAML section.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -390,6 +390,9 @@ $if(logo)$
 \logo{\includegraphics{$logo$}}
 $endif$
 $endif$
+$if(hyphenation)$
+\hyphenation{$hyphenation$}
+$endif§
 
 \begin{document}
 $if(has-frontmatter)$
