hierarchicalize: ensure that sections get ids...
even if they're in divs.  Improves #3057.

--- a/test/command/3057.md
+++ b/test/command/3057.md
@@ -7,9 +7,9 @@
 </div>
 </div>
 ^D
-<section>
+<section xml:id="one">
   <title>one</title>
-  <section>
+  <section xml:id="two">
     <title>two</title>
     <para>
     </para>
@@ -26,9 +26,9 @@
 </div>
 </div>
 ^D
-<section>
+<section xml:id="one">
   <title>one</title>
-  <section>
+  <section xml:id="two">
     <title>two</title>
     <para>
     </para>
@@ -48,7 +48,7 @@
   <para>
   </para>
 </section>
-<section>
+<section xml:id="two">
   <title>two</title>
   <para>
   </para>
