Replace Element and makeHierarchical with makeSections.
Text.Pandoc.Shared:

+ Remove `Element` type [API change]
+ Remove `makeHierarchicalize` [API change]
+ Add `makeSections` [API change]
+ Export `deLink` [API change]

Now that we have Divs, we can use them to represent the structure
of sections, and we don't need a special Element type.
`makeSections` reorganizes a block list, adding Divs with
class `section` around sections, and adding numbering
if needed.

This change also fixes some longstanding issues recognizing
section structure when the document contains Divs.
Closes #3057, see also #997.

All writers have been changed to use `makeSections`.
Note that in the process we have reverted the change
c1d058aeb1c6a331a2cc22786ffaab17f7118ccd
made in response to #5168, which I'm not completely
sure was a good idea.

Lua modules have also been adjusted accordingly.
Existing lua filters that use `hierarchicalize` will
need to be rewritten to use `make_sections`.

--- a/test/command/4016.md
+++ b/test/command/4016.md
@@ -15,32 +15,28 @@ pandoc -t beamer
 ^D
 \begin{frame}{Level 2 blocks}
 \protect\hypertarget{level-2-blocks}{}
-
 \begin{columns}[T]
 \begin{column}{0.4\textwidth}
 \begin{block}{Block one}
-
+\protect\hypertarget{block-one}{}
 \begin{itemize}
 \tightlist
 \item
   Item
 \end{itemize}
-
 \end{block}
 \end{column}
 
 \begin{column}{0.6\textwidth}
 \begin{block}{Block two}
-
+\protect\hypertarget{block-two}{}
 \begin{itemize}
 \tightlist
 \item
   Item
 \end{itemize}
-
 \end{block}
 \end{column}
 \end{columns}
-
 \end{frame}
 ```
