permit loading custom format file to speed up tex compilation
See https://web.archive.org/web/20160712215709/http://www.howtotex.com:80/tips-tricks/faster-latex-part-iv-use-a-precompiled-preamble/

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -1,3 +1,5 @@
+%&preamble
+% the first line above loads a custom format file preamble.fmt if existent
 % Options for packages loaded elsewhere
 \PassOptionsToPackage{unicode$for(hyperrefoptions)$,$hyperrefoptions$$endfor$}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
