Remove admonition-title remnants.
Completes 8e01ccb41dde8a5e6123f5b0746c36f240576047

--- a/test/command/4833.md
+++ b/test/command/4833.md
@@ -1,7 +1,7 @@
 ```
 pandoc -f native -t rst
 [Div ("",["warning"],[])
- [Div ("",["admonition-title"],[])
+ [Div ("",["title"],[])
   [Para [Str "Warning"]]
  ,Para [Str "Hi"]]]
 ^D
