--- a/test/command/5753.md
+++ b/test/command/5753.md
@@ -4,12 +4,12 @@
 
     q_3
    + 4
-  - 5
 
+  - 5 +
     q_5
 
 end
 ^D
-[Para [Math DisplayMath "q_3\n+ 4\n- 5",Math DisplayMath "q_5"]
+[Para [Math DisplayMath "q_3\n+ 4",Math DisplayMath "- 5 +\nq_5"]
 ,Para [Str "end"]]
 ```
